# cbor-db

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: CI.yml
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: main.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: cddl_convert.rs  expansion.rs  lib.rs  parse.rs  path_analysis.rs  schema_ir.rs
crates/dsl/tests/: compile_fail.rs  dynamic_target_slice.rs
crates/dsl/tests/ui/: get_invalid_field.rs  get_invalid_field.stderr  get_invalid_type_without_path.rs  get_invalid_type_without_path.stderr  get_missing_dynamic_opt_in.rs  get_missing_dynamic_opt_in.stderr  update_invalid_nested_field.rs  update_invalid_nested_field.stderr  update_invalid_type_without_path.rs  update_invalid_type_without_path.stderr
crates/store/: Cargo.toml
crates/store/src/: lib.rs  navigator.rs  schema.rs  store.rs
crates/store/src/backend/: fjall_backend.rs  memory_backend.rs  mod.rs  rocksdb_backend.rs  sled_backend.rs  surrealkv_backend.rs  tidehunter_backend.rs  turso_backend.rs
docs/benchmarks/: results.json
docs/benchmarks/backend-results/: fjall.json  memory.json  rocksdb.json  sled.json  surrealkv.json  tidehunter.json  turso.json
schemas/: conway.cddl
scripts/: render-benchmark-readme.js
