[package]
name = "dsl"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
cddl = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
store = { workspace = true }
trybuild = { workspace = true }